# personal-finance-cli

./: Cargo.toml  LICENSE.md  README.md
src/: config.rs  main.rs
src/cli/: add.rs  commands.rs  mod.rs
